--- a/fitness-health-backend/.env
+++ b/fitness-health-backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/fitness_tracker_db
+MONGO_URI=mongodb+srv://brendachem7:u7fCLou7r9U1HV8W@cluster0.vro41.mongodb.net/fitness_tracker_db?retryWrites=true&w=majority
 PORT=5000
-JWT_SECRET=your_secret_key
+JWT_SECRET=my_secret_key
