--- a/fitness-health-backend/vercel.json
+++ b/fitness-health-backend/vercel.json
@@ -1,6 +1,7 @@
-{
-    "rewrites": [
-      { "source": "/api/(.*)", "destination": "/api/$1" }
-    ]
-  }
+{ "version": 2, 
+"rewrites": [
+  { "source": "/(.*)", 
+  "destination": "/api" 
+  }]
+}
   
